--- a/app/index.html
+++ b/app/index.html
@@ -11,15 +11,10 @@
         <div class="wrapped">
             <h1 id="site-title">PAAS Helper 😴</h2>
             <button id="render">Render</button>
-            <details class="dropdown">
-                <summary id="deeplinks" role="button" class="secondary outline">Deep Links</summary>
-                <ul>
-                    <li><a aria-disabled="true" deeplink="bossnet">BOSSNet</a></li>
-                    <li><a aria-disabled="true" deeplink="ereferrals">eReferrals</a></li>
-                    <li><a aria-disabled="true" deeplink="inteleconnect">IntelleConnect</a></li>
-                    <li><a aria-disabled="true" deeplink="nacs">NaCS</a></li>
-                </ul>
-            </details>
+                <a aria-disabled="true" deeplink="bossnet">BOSSNet</a>
+                <a aria-disabled="true" deeplink="ereferrals">eReferrals</a>
+                <a aria-disabled="true" deeplink="inteleconnect">IntelleConnect</a>
+                <a aria-disabled="true" deeplink="nacs">NaCS</a>
         </div>
     </header>
     <main class="wrapped">
