--- a/app/index.html
+++ b/app/index.html
@@ -157,11 +157,10 @@
     </dialog>
     <script src="/main.js"></script>
     <script>
-function onBeforeUnload(e) {
-    e.preventDefault()
-}
-
-// window.addEventListener('beforeunload', onBeforeUnload);
+        // prevent accidental closure
+        window.addEventListener('beforeunload', (e) => {
+            e.preventDefault()
+        })
     </script>
 </body>
 </html>
