--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,10 @@
         <div class="hstack">
             <div>
                 <h4>Medical Hx</h4>
-                <textarea autocomplete="off" autocapitalize="off" spellcheck="false" name="history-pmhx" id="" paas-sync-parameter="history-pmhx" class="bigbox"></textarea>
+                <textarea autocomplete="off" autocapitalize="off" spellcheck="false" name="history-pmhx" id="" paas-sync-parameter="history-pmhx" class="bigbox">
+- METs: 
+- GORD: 
+                </textarea>
             </div>
             <div>
                 <h4>Social Hx</h4>
@@ -55,8 +58,7 @@
 - Occupation: 
 - Functioning: 
 - Carers: 
-- Dependants: 
-                </textarea>
+- Dependants: </textarea>
             </div>
         </div>
         <div class="hstack">
@@ -82,9 +84,22 @@
 - Thyromental distance: 
 - Dentition: 
 - Bearded: 
-- Neck ROM: 
-                </textarea>
+- Neck ROM: </textarea>
             </div>
+        </div>
+        <div class="hstack">
+            <div>
+                <h4>Investigations</h4>
+                <textarea autocomplete="off" autocapitalize="off" spellcheck="false" id="" paas-sync-parameter="history-investigation" class="bigbox">
+- ECG: 
+- FBC: 
+- UEC: 
+- LFT: 
+- Iron studies: 
+- TTE: 
+- PFTs: </textarea>
+            </div>
+            <div></div>
         </div>
         
         <h2>Risk Calculators</h2>
