--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PAS Helper</title>
+    <title>PAAS Helper</title>
     <!-- <link rel="stylesheet" href="/pico.min.css" /> -->
     <link rel="stylesheet" href="/main.css">
     <link rel="manifest" href="/manifest.json" />
 </head>
 <body>
     <header>
-        <h1 id="site-title" class="mr-auto">PAAS Helper 😴</h2>
+        <h1 id="site-title" class="mr-auto">PAAS Helper 🤖</h2>
         <a aria-disabled="true" deeplink="bossnet">BOSSNet</a>
         <a aria-disabled="true" deeplink="ereferrals">eReferrals</a>
         <a aria-disabled="true" deeplink="inteleconnect">IntelleConnect</a>
