--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PAAS Helper</title>
+    <title>PASS Helper</title>
     <!-- <link rel="stylesheet" href="/pico.min.css" /> -->
     <link rel="stylesheet" href="/main.css">
     <link rel="manifest" href="/manifest.json" />
 </head>
 <body>
     <header>
-        <h1 id="site-title" class="mr-auto">PAAS Helper 🤖</h2>
-        <a aria-disabled="true" deeplink="bossnet">BOSSNet</a>
-        <a aria-disabled="true" deeplink="ereferrals">eReferrals</a>
-        <a aria-disabled="true" deeplink="inteleconnect">IntelleConnect</a>
-        <a aria-disabled="true" deeplink="nacs">NaCS</a>
-        <button id="render">Render</button>
+        <div>
+            <h1 id="site-title" class="mr-auto">PAAS Helper 🤖</h2>
+            <a aria-disabled="true" deeplink="bossnet">BOSSNet</a>
+            <a aria-disabled="true" deeplink="ereferrals">eReferrals</a>
+            <a aria-disabled="true" deeplink="inteleconnect">IntelleConnect</a>
+            <a aria-disabled="true" deeplink="nacs">NaCS</a>
+            <button id="render">Render</button>
+        </div>
     </header>
     <main class="wrapped">
         <h2>Identification</h2>
