Adds download button

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
             <a aria-disabled="true" deeplink="ereferrals">eReferrals</a>
             <a aria-disabled="true" deeplink="inteleconnect">IntelleConnect</a>
             <a aria-disabled="true" deeplink="nacs">NaCS</a>
+            <button id="archive">Archive</button>
             <button id="render">Export</button>
         </div>
     </header>
